# Change Log
[ToLaserBlade (Fabric)](https://www.curseforge.com/minecraft/mc-mods/tolaserblade-fabric).
[Source](https://github.com/Iunius118/ToLaserBlade-Fabric).

## [Unreleased]

## [9.0.0]
- Require Minecraft 1.21.6.
- Require Fabric Loader 0.16.14 and Fabric API 0.127.1+1.21.6.
- Require Cloth Config API 19.0.147.

### Changed
- Port to 1.21.6.
- Change rendering of laser blades in GUI.

## [8.0.0]
### Changed
- Release version 8.0.0.

## [8.0.0-beta.2]
### Added
- Add boolean property `tolaserblade:blocking` to represent condition of laser blades.
- New sound events for use with `blocks_attacks` component:
  `tolaserblade:item.laser_blade.block` and `tolaserblade:item.laser_blade_fp.block`.

### Changed
- Change laser blade model and rendering to match `blocks_attacks` component.

### Fixed
- Fix subtractive rendering of laser blade.
- Fix laser blade item properties.

## [8.0.0-beta.1]
- Require Minecraft 1.21.5.
- Require Fabric Loader 0.16.13 and Fabric API 0.121.0+1.21.5.
- Require Cloth Config API 18.0.145.

### Changed
- Port to 1.21.5.

## [7.2.1]
### Fixed
- Modify default `assets/tolaserblade/sounds.json` to replace sound definitions.

## [7.2.0]
### Changed
- Adjust sound effects of laser blade.

## [7.1.0]
### Added
- New sound events:
  `tolaserblade:item.laser_blade.hit`, `tolaserblade:item.laser_blade_fp.hit`, and `tolaserblade:item.laser_trap.activate`.

### Changed
- Require Fabric Loader 0.16.10 and Fabric API 0.116.0+1.21.4.

### Fixed
- Allow laser blade to perform sweep attack.

## [7.0.0]
- Require Minecraft 1.21.4.
- Require Fabric Loader 0.16.9 and Fabric API 0.112.2+1.21.4.
- Require Cloth Config API 17.0.144.

### Added
- Add special model type `tolaserblade:laser_blade` to render laser blade items.
- Add tint source type `tolaserblade:laser_blade` to tint laser blade part items.

### Changed
- Port to 1.21.4.

### Removed
- Remove `laserBlades` from configuration file.

## [6.0.0]
- Require Minecraft 1.21.3.