@@ -1,5 +1,6 @@
 package com.github.iunius118.tolaserblade.core.laserblade;
 
+import com.github.iunius118.tolaserblade.ToLaserBlade;
 import com.github.iunius118.tolaserblade.api.core.laserblade.LaserBladeState;
 import com.github.iunius118.tolaserblade.core.component.ModDataComponents;
 import com.github.iunius118.tolaserblade.world.item.LaserBladeItemUtil;
@@ -19,7 +20,7 @@ public class LaserBlade {
     public static final float BASE_ATTACK = 3.0F;
     public static final float BASE_SPEED  = -1.2F;
     public static final float MOD_ATK_MIN = 0.0F;
-    public static final float MOD_ATK_MAX = 2040.0F;
+    public static final float MOD_ATK_MAX = 4194304.0F;
     public static final float MOD_ATK_GIFT = 3.0F;
     public static final float MOD_ATK_CRITICAL_BONUS = 8.0F;
     public static final float MOD_CRITICAL_BONUS_VS_WITHER = 0.5F;
@@ -33,6 +34,12 @@ public class LaserBlade {
         float attack = Objects.requireNonNullElseGet(itemStack.get(ModDataComponents.LASER_BLADE_ATTACK),
                 () -> LaserBladeDataMigrator.getAttack(itemStack)); // Attempt to get and migrate data from CUSTOM_DATA
         return Mth.clamp(attack, MOD_ATK_MIN, MOD_ATK_MAX);
+    }
+
+    public static float getAttack(ItemStack itemStack, float multiplier) {
+        float attack = Objects.requireNonNullElseGet(itemStack.get(ModDataComponents.LASER_BLADE_ATTACK),
+                () -> LaserBladeDataMigrator.getAttack(itemStack)); // Attempt to get and migrate data from CUSTOM_DATA
+        return Mth.clamp(attack * multiplier, MOD_ATK_MIN, MOD_ATK_MAX);
     }
 
     public static void setAttack(ItemStack itemStack, float damage) {
@@ -54,9 +61,7 @@ public class LaserBlade {
     }
 
     private static float getMaxAttackUpgradeCount() {
-        // Immediate value instead of config
-        // return (float) ToLaserBladeConfig.SERVER.maxAttackDamageUpgradeCount.get(); // Forge
-        return 8;
+        return ToLaserBlade.serverConfig.maxAttackDamageUpgradeCount();
     }
 
     public static boolean canUpgradeSpeed(float speed) {
@@ -64,9 +69,13 @@ public class LaserBlade {
     }
 
     public static void updateItemAttributeModifiers(ItemStack itemStack) {
+        float damageUpgradeMultiplier = ToLaserBlade.serverConfig.attackDamageUpgradeMultiplier();
+        float damageModifier = ToLaserBlade.serverConfig.laserBladeDamageModifier();
+        float speedModifier = ToLaserBlade.serverConfig.laserBladeSpeedModifier();
+
         // Attack damage and speed from item compounds and base value
-        float attackDamage = LaserBlade.getAttack(itemStack) + BASE_ATTACK;
-        float attackSpeed  = LaserBlade.getSpeed(itemStack) + BASE_SPEED;
+        float attackDamage = LaserBlade.getAttack(itemStack, damageUpgradeMultiplier) + BASE_ATTACK + damageModifier;
+        float attackSpeed  = LaserBlade.getSpeed(itemStack) + BASE_SPEED + speedModifier;
 
         // Add attack damage bonus to attack damage
         boolean isFireResistant = LaserBladeItemUtil.isFireResistant(itemStack);
